WIP: create html structure

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,69 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hilman Fikry | Web Developer - Indonesia</title>
+    <link rel="icon" type="image/jpg" href="./assets/favicon-hilman.jpg">
   </head>
   <body>
-    
+    <header>
+      <h1>Hilman Fikry</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about" class="grid">
+        <h2 class="flex flex-col">
+          <span>Hi, I'm</span>
+          <span>Hilman Fikry</span>
+          <span><span>a </span><span id="typing"></span><span>|</span></span>
+        </h2>
+        <p>
+          I'm a developer from Indonesia with roots in physics. I graduated as
+          valedictorian from Institut Teknologi Bandung and earned a fully
+          funded master's in Quantum Science and Technology at the University of
+          Barcelona. Now I craft the web, daily.
+        </p>
+        <div>
+          <img src="./assets/potrait-hilman.jpg" alt="A potrait of Hilman Fikry">
+          <nav><a href="#contact">Contact me</a></nav>
+        </div>
+      </section>
+      <section id="projects">
+        <h2>Featured Projects</h2>
+        <h3>Web development</h3>
+        <div>
+          <!-- 4 *
+          <article>
+            <video src=""></video>
+            <h4></h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article> -->
+        </div>
+        <h3>Simulations and data analysis</h3>
+        <div>
+          <!-- 2 *
+          <article>
+            <video src=""></video>
+            <h4></h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article> -->
+        </div>
+      </section>
+      <section id="skills"></section>
+      <section id="contact"></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
