feat: complete basic html structure

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hilman Fikry | Web Developer - Indonesia</title>
-    <link rel="icon" type="image/jpg" href="./assets/favicon-hilman.jpg">
+    <link rel="icon" type="image/jpg" href="./assets/favicon-hilman.jpg" />
   </head>
   <body>
     <header>
@@ -32,14 +32,17 @@
           Barcelona. Now I craft the web, daily.
         </p>
         <div>
-          <img src="./assets/potrait-hilman.jpg" alt="A potrait of Hilman Fikry">
+          <img
+            src="./assets/portrait-hilman.jpg"
+            alt="A potrait of Hilman Fikry"
+          />
           <nav><a href="#contact">Contact me</a></nav>
         </div>
       </section>
       <section id="projects">
         <h2>Featured Projects</h2>
         <h3>Web development</h3>
-        <div>
+        <div id="web-development">
           <!-- 4 *
           <article>
             <video src=""></video>
@@ -50,7 +53,7 @@
           </article> -->
         </div>
         <h3>Simulations and data analysis</h3>
-        <div>
+        <div id="sda">
           <!-- 2 *
           <article>
             <video src=""></video>
@@ -61,9 +64,50 @@
           </article> -->
         </div>
       </section>
-      <section id="skills"></section>
-      <section id="contact"></section>
+      <section id="skills">
+        <h2>Current Skills</h2>
+        <p>
+          Here are the programming languages and tools I typically work with—and
+          the list just keeps growing! :)
+        </p>
+        <h3>Programming languages</h3>
+        <div id="languages">
+          <!-- 8 *
+          <figure>
+            <a href="">
+              <img src="" alt="">
+              <figcaption></figcaption>
+            </a>
+          </figure> -->
+        </div>
+        <h3>Tools</h3>
+        <div id="tools">
+          <!-- 14 *
+          <figure>
+            <a href="">
+              <img src="" alt="">
+              <figcaption></figcaption>
+            </a>
+          </figure> -->
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Hilman Fikry <span id="arrow-down"></span></h2>
+        <p>A web developer from Indonesia</p>
+        <article>
+          <h3>Get in touch</h3>
+          <address>
+            <!-- 5 *
+            <article>
+              <img src="" alt="">
+              <p></p>
+            </article> -->
+          </address>
+        </article>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Made with ❤️ in Indonesia</p>
+    </footer>
   </body>
 </html>
