WIP: style page with tailwind

--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,13 @@
     <title>Hilman Fikry | Web Developer - Indonesia</title>
     <link rel="icon" type="image/jpg" href="./assets/favicon-hilman.jpg" />
   </head>
-  <body>
-    <header>
-      <h1>Hilman Fikry</h1>
+  <body class="px-[50px]">
+    <header
+      class="fixed inset-x-0 top-0 flex justify-between px-[50px] py-[15px]"
+    >
+      <h1 class="text-3xl font-medium">Hilman Fikry</h1>
       <nav>
-        <ul>
+        <ul class="flex justify-center gap-x-5 text-2xl">
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -18,9 +20,9 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="mt-[70px]">
       <section id="about" class="grid">
-        <h2 class="flex flex-col">
+        <h2 class="flex flex-col text-5xl font-semibold">
           <span>Hi, I'm</span>
           <span>Hilman Fikry</span>
           <span><span>a </span><span id="typing"></span><span>|</span></span>
