WIP: style scroll driven animation

--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hilman Fikry | Web Developer - Indonesia</title>
-    <link rel="icon" type="image/jpg" href="./assets/favicon-hilman.jpg" />
+    <link href="./assets/favicon-hilman.jpg" rel="icon" type="image/jpg" />
   </head>
   <body class="px-[50px]">
     <header
-      class="fixed inset-x-0 top-0 flex justify-between px-[50px] py-[15px]"
+      class="fixed inset-x-0 top-0 flex justify-between border-b-[0.5px] border-slate-500/50 bg-white/20 px-[50px] py-[15px] backdrop-blur-xs"
     >
       <h1 class="text-3xl font-medium">Hilman Fikry</h1>
       <nav>
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main class="mt-[70px]">
-      <section id="about" class="grid">
+      <section class="grid" id="about">
         <h2 class="flex flex-col text-5xl font-semibold">
           <span>Hi, I'm</span>
           <span>Hilman Fikry</span>
@@ -35,8 +35,8 @@
         </p>
         <div>
           <img
-            src="./assets/portrait-hilman.jpg"
             alt="A potrait of Hilman Fikry"
+            src="./assets/portrait-hilman.jpg"
           />
           <nav><a href="#contact">Contact me</a></nav>
         </div>
