--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
   </head>
   <body class="px-[50px]">
     <header
-      class="fixed inset-x-0 top-0 flex justify-between border-b-[0.5px] border-slate-500/50 bg-white/20 px-[50px] py-[15px] backdrop-blur-xs"
+      class="fixed inset-x-0 top-0 flex items-center justify-between bg-white/20 px-[50px] py-[15px] backdrop-blur-xs before:absolute before:inset-x-[50px] before:bottom-0 before:h-min before:border-b-[0.5px] before:border-slate-500/50 before:content-['']"
     >
-      <h1 class="text-3xl font-medium">Hilman Fikry</h1>
+      <h1 class="mr-10 text-3xl font-medium whitespace-nowrap">Hilman Fikry</h1>
       <nav>
         <ul class="flex justify-center gap-x-5 text-2xl">
           <li><a href="#about">About</a></li>
