refactor: group progress bar class as a unit

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
   </head>
   <body class="px-[50px]">
     <header
-      class="progress-bar fixed inset-x-0 top-0 flex items-center justify-between bg-white/20 px-[50px] py-[15px] backdrop-blur-xs before:absolute before:inset-x-[50px] before:bottom-0 before:h-min before:border-b-[0.5px] before:border-slate-500/50 before:content-[''] after:content-['']"
+      class="progress-bar fixed inset-x-0 top-0 flex items-center justify-between bg-white/20 px-[50px] py-[15px] backdrop-blur-xs"
     >
       <h1 class="mr-10 text-3xl font-medium whitespace-nowrap">Hilman Fikry</h1>
       <nav>
