style: add blurred page background

--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,9 @@
         </ul>
       </nav>
     </header>
-    <main class="mt-[100px]">
-      <section class="grid grid-flow-col grid-rows-2 auto-cols-fr gap-x-[50px]" id="about">
-        <h2 class="flex flex-col text-4xl/snug font-semibold">
+    <main class="pt-[100px]">
+      <section class="grid grid-flow-col grid-rows-2 auto-cols-fr gap-x-[50px] px-[100px] items-center " id="about">
+        <h2 class="flex flex-col text-5xl/snug font-semibold">
           <span>Hi, I'm</span>
           <span>Hilman Fikry</span>
           <span><span>a </span><span id="typing"></span><span id="cursor"></span></span>
@@ -33,7 +33,7 @@
           funded master's in Quantum Science and Technology at the University of
           Barcelona. Now I craft the web, daily.
         </p>
-        <div class="row-span-full">
+        <div class="row-span-full justify-self-center">
           <img
             alt="A potrait of Hilman Fikry"
             src="./assets/portrait-hilman.jpg"
