WIP: add video player feature

--- a/src/template.html
+++ b/src/template.html
@@ -62,32 +62,68 @@
           </nav>
         </div>
       </section>
-      <section class="separator" id="projects">
+      <section class="separator pb-20" id="projects">
         <h2>Featured Projects</h2>
         <h3>Web development</h3>
-        <div id="web-development">
-          <!-- 4 *
+        <div id="web-dev">
           <article>
-            <video src=""></video>
-            <h4></h4>
+            <div class="video-container">
+              <div id="battleship"></div>
+            </div>
+            <h4>Battleship Game</h4>
             <p></p>
             <div></div>
             <div></div>
-          </article> -->
+          </article>
+          <article>
+            <div class="video-container">
+              <div id="weather-app"></div>
+            </div>
+            <h4>WeatherApp</h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article>
+          <article>
+            <div class="video-container">
+              <div id="todo-list"></div>
+            </div>
+            <h4>To Do List</h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article>
+          <article>
+            <div class="video-container">
+              <div id="meater"></div>
+            </div>
+            <h4>Meater</h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article>
         </div>
         <h3>Simulations and data analysis</h3>
         <div id="sda">
-          <!-- 2 *
           <article>
-            <video src=""></video>
-            <h4></h4>
+            <div class="video-container">
+              <div id="mstm"></div>
+            </div>
+            <h4>Multiple Sphere T-Matrix</h4>
             <p></p>
             <div></div>
             <div></div>
-          </article> -->
+          </article>
+          <article>
+            <img src="./assets/fmr.png" alt="FMR data">
+            <h4>Ferromagnetic Resonance Analysis</h4>
+            <p></p>
+            <div></div>
+            <div></div>
+          </article>
         </div>
       </section>
-      <section class="separator" id="skills">
+      <section class="separator pb-20" id="skills">
         <h2>Current Skills</h2>
         <p>
           Here are the programming languages and tools I typically work with—and
@@ -114,7 +150,7 @@
           </figure> -->
         </div>
       </section>
-      <section class="separator" id="contact">
+      <section class="separator pb-20" id="contact">
         <h2>Hilman Fikry <span id="arrow-down"></span></h2>
         <p>A web developer from Indonesia</p>
         <article>
