WIP: create projects section html

--- a/src/template.html
+++ b/src/template.html
@@ -65,59 +65,95 @@
       <section class="separator pb-20" id="projects">
         <h2>Featured Projects</h2>
         <h3>Web development</h3>
-        <div id="web-dev">
+        <div>
           <article>
-            <div class="video-container">
-              <div id="battleship"></div>
-            </div>
+            <div id="battleship"></div>
             <h4>Battleship Game</h4>
-            <p></p>
+            <p>
+              A classic guessing game you can play with a friend or against a
+              computer, on any device. The AI opponent is powered by a smart
+              algorithm using Breadth-First Search, making it a real challenge
+              to outsmart. You can position your ships manually to mislead your
+              opponent, or hit the "Randomize" button if you're feeling lazy.
+              It's the closest experience to playing a physical Battleship game,
+              now in digital form!
+            </p>
             <div></div>
             <div></div>
           </article>
           <article>
-            <div class="video-container">
-              <div id="weather-app"></div>
-            </div>
+            <div id="weather-app"></div>
             <h4>WeatherApp</h4>
-            <p></p>
+            <p>
+              A visually soothing weather app featuring a frosted glass UI and
+              animated backgrounds that reflect real-time weather conditions.
+              Beyond basic forecasts, it displays the current local time for
+              every city you search. Each location is automatically pinned and
+              saved using localStorage, so your entire search history stays with
+              you, even after closing the app. Best of all, it's fully
+              responsive and works beautifully on any device.
+            </p>
             <div></div>
             <div></div>
           </article>
           <article>
-            <div class="video-container">
-              <div id="todo-list"></div>
-            </div>
+            <div id="todo-list"></div>
             <h4>To Do List</h4>
-            <p></p>
+            <p>
+              A minimalist, dark-themed to-do app that's intuitive to use, just
+              a few clicks to manage your tasks without compromising on powerful
+              features. In addition to the basics, it includes a "My Day"
+              section for tasks due today, an "Important" section for your
+              high-priority items, and a "Planned" section that organizes tasks
+              by upcoming deadlines. All your data is automatically saved using
+              localStorage, so everything stays intact even after closing the
+              app.
+            </p>
             <div></div>
             <div></div>
           </article>
           <article>
-            <div class="video-container">
-              <div id="meater"></div>
-            </div>
+            <div id="meater"></div>
             <h4>Meater</h4>
-            <p></p>
+            <p>
+              A modern, responsive restaurant page that fuses earthy,
+              street-style aesthetics with a clean and elegant user interface.
+              The menu section features a thoughtfully crafted layout and sharp
+              typography, creating a visually appealing and easy-to-navigate
+              experience across all devices.
+            </p>
             <div></div>
             <div></div>
           </article>
         </div>
         <h3>Simulations and data analysis</h3>
-        <div id="sda">
+        <div>
           <article>
-            <div class="video-container">
-              <div id="mstm"></div>
-            </div>
+            <div id="mstm"></div>
             <h4>Multiple Sphere T-Matrix</h4>
-            <p></p>
+            <p>
+              A computational study exploring how different particle
+              configurations affect optical scattering characteristics. This
+              project uses Multiple Sphere T-Matrix (MSTM) method to simulate
+              light interaction with spherical aggregates, enabling precise
+              analysis of extinction spectra and scattering behavior. The
+              simulations provide insight into how structural geometry
+              influences optical response, with potential applications in
+              nanophotonics and material science.
+            </p>
             <div></div>
             <div></div>
           </article>
           <article>
-            <img src="./assets/fmr.png" alt="FMR data">
+            <img class="w-[560px]" src="./assets/fmr.png" alt="FMR data" />
             <h4>Ferromagnetic Resonance Analysis</h4>
-            <p></p>
+            <p>
+              A MATLAB-based program designed to analyze raw ferromagnetic
+              resonance (FMR) measurement data with precision and flexibility.
+              The tool streamlines the extraction of key magnetic parameters by
+              processing spectral data, applying curve-fitting techniques, and
+              managing angle-dependent inputs.
+            </p>
             <div></div>
             <div></div>
           </article>
