--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hilman Fikry | Web Developer - Indonesia</title>
     <link href="./assets/favicon-hilman.jpg" rel="icon" type="image/jpg" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
   </head>
   <body class="px-[50px]">
     <header
@@ -78,7 +83,13 @@
               It's the closest experience to playing a physical Battleship game,
               now in digital form!
             </p>
-            <div></div>
+            <div class="project-tools">
+              <div><i class="devicon-html5-plain"></i> HTML</div>
+              <div><i class="devicon-css3-plain"></i> CSS</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div><i class="devicon-jest-plain"></i> Jest</div>
+              <div><i class="devicon-webpack-plain"></i> Webpack</div>
+            </div>
             <div></div>
           </article>
           <article>
@@ -93,7 +104,12 @@
               you, even after closing the app. Best of all, it's fully
               responsive and works beautifully on any device.
             </p>
-            <div></div>
+            <div class="project-tools">
+              <div><i class="devicon-html5-plain"></i> HTML</div>
+              <div><i class="devicon-css3-plain"></i> CSS</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div><i class="devicon-webpack-plain"></i> Webpack</div>
+            </div>
             <div></div>
           </article>
           <article>
@@ -109,7 +125,12 @@
               localStorage, so everything stays intact even after closing the
               app.
             </p>
-            <div></div>
+            <div class="project-tools">
+              <div><i class="devicon-html5-plain"></i> HTML</div>
+              <div><i class="devicon-css3-plain"></i> CSS</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div><i class="devicon-webpack-plain"></i> Webpack</div>
+            </div>
             <div></div>
           </article>
           <article>
@@ -122,8 +143,13 @@
               typography, creating a visually appealing and easy-to-navigate
               experience across all devices.
             </p>
-            <div></div>
-            <div></div>
+            <div class="project-tools"></div>
+            <div>
+              <div><i class="devicon-html5-plain"></i> HTML</div>
+              <div><i class="devicon-css3-plain"></i> CSS</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div><i class="devicon-webpack-plain"></i> Webpack</div>
+            </div>
           </article>
         </div>
         <h3>Simulations and data analysis</h3>
@@ -141,7 +167,25 @@
               influences optical response, with potential applications in
               nanophotonics and material science.
             </p>
-            <div></div>
+            <div class="project-tools">
+              <div><i class="devicon-fortran-original"></i> Fortran</div>
+              <div>
+                <img
+                  class="white-icon"
+                  src="./assets/wolfram-language-seeklogo.svg"
+                  alt="Icon"
+                />
+                Wolfram Language
+              </div>
+              <div>
+                <img
+                  class="white-icon"
+                  src="./assets/icons8-wolfram-mathematica-100.png"
+                  alt="Icon"
+                />
+                Mathematica
+              </div>
+            </div>
             <div></div>
           </article>
           <article>
@@ -152,9 +196,11 @@
               resonance (FMR) measurement data with precision and flexibility.
               The tool streamlines the extraction of key magnetic parameters by
               processing spectral data, applying curve-fitting techniques, and
-              managing angle-dependent inputs.
+              managing temperarature and angle dependent inputs.
             </p>
-            <div></div>
+            <div class="project-tools">
+              <div><i class="devicon-matlab-plain"></i> MATLAB</div>
+            </div>
             <div></div>
           </article>
         </div>
