feat: create projects section HTML structure

--- a/src/template.html
+++ b/src/template.html
@@ -90,7 +90,21 @@
               <div><i class="devicon-jest-plain"></i> Jest</div>
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
-            <div></div>
+            <div>
+              <a href="https://gofhilman.github.io/battleship/" target="_blank" rel="noopener noreferrer">
+                <div>
+                  <img
+                    class="white-icon"
+                    src="./assets/web-box.svg"
+                    alt="Icon"
+                  />
+                  View live
+                </div>
+              </a>
+              <a href="https://github.com/gofhilman/battleship" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
           </article>
           <article>
             <div id="weather-app"></div>
@@ -110,7 +124,21 @@
               <div><i class="devicon-javascript-plain"></i> JavaScript</div>
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
-            <div></div>
+            <div>
+              <a href="https://gofhilman.github.io/weather-app/" target="_blank" rel="noopener noreferrer">
+                <div>
+                  <img
+                    class="white-icon"
+                    src="./assets/web-box.svg"
+                    alt="Icon"
+                  />
+                  View live
+                </div>
+              </a>
+              <a href="https://github.com/gofhilman/weather-app" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
           </article>
           <article>
             <div id="todo-list"></div>
@@ -131,7 +159,21 @@
               <div><i class="devicon-javascript-plain"></i> JavaScript</div>
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
-            <div></div>
+            <div>
+              <a href="https://gofhilman.github.io/todo-list/" target="_blank" rel="noopener noreferrer">
+                <div>
+                  <img
+                    class="white-icon"
+                    src="./assets/web-box.svg"
+                    alt="Icon"
+                  />
+                  View live
+                </div>
+              </a>
+              <a href="https://github.com/gofhilman/todo-list" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
           </article>
           <article>
             <div id="meater"></div>
@@ -143,12 +185,26 @@
               typography, creating a visually appealing and easy-to-navigate
               experience across all devices.
             </p>
-            <div class="project-tools"></div>
-            <div>
+            <div class="project-tools">
               <div><i class="devicon-html5-plain"></i> HTML</div>
               <div><i class="devicon-css3-plain"></i> CSS</div>
               <div><i class="devicon-javascript-plain"></i> JavaScript</div>
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
+            </div>
+            <div>
+              <a href="https://gofhilman.github.io/restaurant-page/" target="_blank" rel="noopener noreferrer">
+                <div>
+                  <img
+                    class="white-icon"
+                    src="./assets/web-box.svg"
+                    alt="Icon"
+                  />
+                  View live
+                </div>
+              </a>
+              <a href="https://github.com/gofhilman/restaurant-page" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
             </div>
           </article>
         </div>
@@ -186,7 +242,11 @@
                 Mathematica
               </div>
             </div>
-            <div></div>
+            <div>
+              <a href="https://github.com/gofhilman/mstm" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
           </article>
           <article>
             <img class="w-[560px]" src="./assets/fmr.png" alt="FMR data" />
@@ -201,7 +261,11 @@
             <div class="project-tools">
               <div><i class="devicon-matlab-plain"></i> MATLAB</div>
             </div>
-            <div></div>
+            <div>
+              <a href="https://github.com/gofhilman/fmr-analysis" target="_blank" rel="noopener noreferrer">
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
           </article>
         </div>
       </section>
