WIP: style projects section

--- a/src/template.html
+++ b/src/template.html
@@ -38,7 +38,7 @@
           ></span>
         </h2>
         <p
-          class="mr-30 rounded-2xl border-l-10 border-slate-500 px-10 py-5 text-xl/normal"
+          class="mr-30 border-l-10 border-slate-500 px-10 py-5 text-xl/normal"
         >
           I'm a developer from Indonesia with roots in physics. I graduated as
           valedictorian from Institut Teknologi Bandung and earned a fully
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="separator pb-20" id="projects">
-        <h2>Featured Projects</h2>
+        <h2 class="line">Featured Projects</h2>
         <h3>Web development</h3>
         <div>
           <article>
