WIP: style projects section

--- a/src/template.html
+++ b/src/template.html
@@ -243,6 +243,7 @@
               </div>
             </div>
             <div>
+              <div></div>
               <a href="https://github.com/gofhilman/mstm" target="_blank" rel="noopener noreferrer">
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
@@ -262,6 +263,7 @@
               <div><i class="devicon-matlab-plain"></i> MATLAB</div>
             </div>
             <div>
+              <div></div>
               <a href="https://github.com/gofhilman/fmr-analysis" target="_blank" rel="noopener noreferrer">
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
