style: complete projects section style

--- a/src/template.html
+++ b/src/template.html
@@ -37,9 +37,7 @@
             ><span>a </span><span id="typing"></span><span id="cursor"></span
           ></span>
         </h2>
-        <p
-          class="mr-30 border-l-10 border-slate-500 px-10 py-5 text-xl/normal"
-        >
+        <p class="mr-30 border-l-10 border-slate-500 px-10 py-5 text-xl/normal">
           I'm a developer from Indonesia with roots in physics. I graduated as
           valedictorian from Institut Teknologi Bandung and earned a fully
           funded master's in Quantum Science and Technology at the University of
@@ -55,7 +53,7 @@
               class="max-w-[300px] animate-[vertical-swing_3s_ease-in-out_infinite_alternate] rounded-sm"
             />
             <div
-              class="absolute top-5 left-5 -z-1 size-full animate-[vertical-swing_3s_ease-in-out_500ms_infinite_alternate] rounded-sm bg-slate-500"
+              class="shadowing absolute top-5 left-5 -z-1 size-full animate-[vertical-swing_3s_ease-in-out_500ms_infinite_alternate] rounded-sm bg-slate-500"
             ></div>
           </div>
           <nav>
@@ -91,17 +89,21 @@
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
             <div>
-              <a href="https://gofhilman.github.io/battleship/" target="_blank" rel="noopener noreferrer">
-                <div>
-                  <img
-                    class="white-icon"
-                    src="./assets/web-box.svg"
-                    alt="Icon"
-                  />
+              <a
+                href="https://gofhilman.github.io/battleship/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
                   View live
                 </div>
               </a>
-              <a href="https://github.com/gofhilman/battleship" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://github.com/gofhilman/battleship"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
@@ -125,17 +127,21 @@
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
             <div>
-              <a href="https://gofhilman.github.io/weather-app/" target="_blank" rel="noopener noreferrer">
-                <div>
-                  <img
-                    class="white-icon"
-                    src="./assets/web-box.svg"
-                    alt="Icon"
-                  />
+              <a
+                href="https://gofhilman.github.io/weather-app/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
                   View live
                 </div>
               </a>
-              <a href="https://github.com/gofhilman/weather-app" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://github.com/gofhilman/weather-app"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
@@ -160,17 +166,21 @@
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
             <div>
-              <a href="https://gofhilman.github.io/todo-list/" target="_blank" rel="noopener noreferrer">
-                <div>
-                  <img
-                    class="white-icon"
-                    src="./assets/web-box.svg"
-                    alt="Icon"
-                  />
+              <a
+                href="https://gofhilman.github.io/todo-list/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
                   View live
                 </div>
               </a>
-              <a href="https://github.com/gofhilman/todo-list" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://github.com/gofhilman/todo-list"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
@@ -192,17 +202,21 @@
               <div><i class="devicon-webpack-plain"></i> Webpack</div>
             </div>
             <div>
-              <a href="https://gofhilman.github.io/restaurant-page/" target="_blank" rel="noopener noreferrer">
-                <div>
-                  <img
-                    class="white-icon"
-                    src="./assets/web-box.svg"
-                    alt="Icon"
-                  />
+              <a
+                href="https://gofhilman.github.io/restaurant-page/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
                   View live
                 </div>
               </a>
-              <a href="https://github.com/gofhilman/restaurant-page" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://github.com/gofhilman/restaurant-page"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
@@ -225,7 +239,7 @@
             </p>
             <div class="project-tools">
               <div><i class="devicon-fortran-original"></i> Fortran</div>
-              <div>
+              <div class="center-icon">
                 <img
                   class="white-icon"
                   src="./assets/wolfram-language-seeklogo.svg"
@@ -233,7 +247,7 @@
                 />
                 Wolfram Language
               </div>
-              <div>
+              <div class="center-icon">
                 <img
                   class="white-icon"
                   src="./assets/icons8-wolfram-mathematica-100.png"
@@ -243,8 +257,12 @@
               </div>
             </div>
             <div>
-              <div></div>
-              <a href="https://github.com/gofhilman/mstm" target="_blank" rel="noopener noreferrer">
+              <div class="invisible"></div>
+              <a
+                href="https://github.com/gofhilman/mstm"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
@@ -263,8 +281,12 @@
               <div><i class="devicon-matlab-plain"></i> MATLAB</div>
             </div>
             <div>
-              <div></div>
-              <a href="https://github.com/gofhilman/fmr-analysis" target="_blank" rel="noopener noreferrer">
+              <div class="invisible"></div>
+              <a
+                href="https://github.com/gofhilman/fmr-analysis"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div><i class="devicon-github-original"></i> Source</div>
               </a>
             </div>
